--- a/ShoppingList.html
+++ b/ShoppingList.html
@@ -5,26 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="add.svg">
     <link rel="stylesheet" type="text/css" href="./ShoppingList.css">
     <title>To do List</title>
 </head>
 
 <body>
 
+    <!-- Header -->
     <header class=headers>
         <h1> To-Do List</h1>
     </header>
     <hr>
+
+
     <div class="grid">
+
+        <!-- Input Box and Button -->
         <div class="input-button">
             <div id="inputArea">
                 <input id="userInput" type="text" placeholder="Add Input Item">
-                <button id="addButton">
-                    <img width=20px src="./plus.svg">
+                <button class="addButton" id="addButtonId">
+                    <img src="./add.svg">
                 </button>
             </div>
         </div>
+
+        <!-- List Items -->
+        <div class="main-list">
+            <ul id="taskList">
+                <h2 class="empty-list">Empty List</h2>
+            </ul>
+        </div>
+
     </div>
+
+
     <script src="./ShoppingList.js"></script>
 </body>
 
