--- a/ShoppingList.html
+++ b/ShoppingList.html
@@ -26,7 +26,7 @@
             <div id="inputArea">
                 <input id="userInput" type="text" placeholder="Add Input Item">
                 <button class="addButton" id="addButtonId">
-                    <img src="./add.svg">
+                    <img width=20px src="./add.svg">
                 </button>
             </div>
         </div>
