--- a/ToDo.html
+++ b/ToDo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="add.svg">
-    <link rel="stylesheet" type="text/css" href="./ShoppingList.css">
+    <link rel="stylesheet" type="text/css" href="./ToDo.css">
     <title>To do List</title>
 </head>
 
@@ -41,7 +41,7 @@
     </div>
 
 
-    <script src="./ShoppingList.js"></script>
+    <script src="./ToDo.js"></script>
 </body>
 
 </html>
