--- a/ToDo.html
+++ b/ToDo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="add.svg">
+    <link rel="shortcut icon" href="images/add.svg">
     <link rel="stylesheet" type="text/css" href="./ToDo.css">
     <title>To do List</title>
 </head>
@@ -26,7 +26,7 @@
             <div id="inputArea">
                 <input id="userInput" type="text" placeholder="Add Input Item">
                 <button class="addButton" id="addButtonId">
-                    <img width=20px src="./add.svg">
+                    <img width=20px src="./images/add.svg" alt="Add icon">
                 </button>
             </div>
         </div>
